# fastapi-scrapping

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  scrapped_data.json  setup_hooks.sh
app/: config.py  config.yaml  main.py
app/auth/: auth.py
app/models/pydantic/: product.py
app/services/: cache.py  database.py  notification.py  scraping_service.py  scrapper.py
